feat: added fixes to wisdom cache and testing elements